<resources>
    <string name="app_name">Send Message</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="your_message">Your Message</string>
    <string name="send_sms">Send SMS</string>
    <string name="retry">Retry</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="failure_permission">Failure Permission</string>
    <string name="sms_not_sent">SMS Not Sent</string>
    <string name="sms_sent">SMS Sent</string>
    <string name="recieved_sms">Recieved SMS</string>
    <string name="mobile_number">Mobile Number</string>
</resources>
