<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/medium_light_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/honey"
        android:text="@string/enter_number"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etmob_num"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:background="@color/bone"
        android:ems="10"
        android:hint="Mobile Number"
        android:inputType="number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etmob_num"
        android:background="@color/honey"
        android:text="@string/enter_message"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bsend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/butterscotch"
        android:text="@string/send" />

    <EditText
        android:id="@+id/etmessage"
        android:layout_width="283dp"
        android:layout_height="75dp"
        android:layout_above="@+id/bsend"
        android:layout_alignParentStart="true"
        android:background="@color/bone"
        android:ems="10"
        android:hint="@string/your_message"
        android:inputType="textMultiLine"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/ibsend_sms"
        android:layout_width="75dp"
        android:layout_height="74dp"
        android:layout_alignBottom="@+id/etmessage"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/send_sms"
        android:visibility="visible"
        app:srcCompat="@drawable/send_sms" />

    <Button
        android:id="@+id/bretry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etmessage"
        android:layout_alignParentStart="true"
        android:background="@color/butterscotch"
        android:onClick="retryApp"
        android:text="@string/retry"
        android:textAlignment="center"
        android:visibility="invisible" />


</RelativeLayout>